fixed horizontal scrolling in header

--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -2,7 +2,7 @@
 
 .header {
   height: 50px;
-  width: 100vw;
+  width: calc(100% + 30px);
   max-width: $desktop;
   min-width: 300px;
 
@@ -11,9 +11,7 @@
   justify-content: space-between;
 
   padding-left: 15px;
-  padding-right: 15px;
   margin-left: -15px;
-  margin-right: -15px;
 
   background-color: rgb(45, 45, 45);
 
